namespace.yaml
---
kind: Namespace
apiVersion: v1
metadata:
  name: hello-kubernetes
  labels:
    owner: Jane Smith
    contact: jane.smith@acme.com
