service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes-scv
  namespace: hello-kubernetes
  labels:
    team: forward-deployed-engineering

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: hello-kubernetes
